<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PlayrActivity!</string>
    <string name="app_name">Playr</string>
    <string name="backward">Back</string>
    <string name="play">Play</string>
    <string name="forward">Next</string>
    <string name="action">Action</string>
    <string name="toggle">Toggle</string>
    <string name="tasker">Tasker</string>
    <string name="api">API</string>
</resources>
